<resources>
    <string name="app_name"> TO Do List Maintenance</string>
    <string name="t1">TO DO LIST</string>
    <string name="b1">TO DO\'S</string>
    <string name="b2">MY TO DO LIST</string>
    <string name="b3">SHOW BMI CATEGORY</string>
    <string name="t2">TO DO\'S</string>
    <string name="t3">DAY NO 1</string>
    <string name="t4">TASK LABEL</string>
    <string name="b4">View</string>
    <string name="t5">DAY NO 2</string>
    <string name="t6">TASK LABEL</string>
    <string name="b5">View</string>
    <string name="t7">DAY NO 3</string>
    <string name="t8">TASK LABEL</string>
    <string name="b6">View</string>
    <string name="t9">DAY NO 4</string>
    <string name="t10">TASK LABEL</string>
    <string name="b7">View</string>
    <string name="t11">TO DO DESCRIPTION</string>
    <string name="t12">DAY NO</string>
    <string name="t13">TASK DETAILS</string>
    <string name="t14">What Can I Do</string>
    <string name="b8">MY TO DO LIST</string>
    <string name="t15">MY TO DO LIST</string>
    <string name="t16">DATE 01</string>
    <string name="b9">View</string>
    <string name="t17">DATE 02</string>
    <string name="b10">VIEW</string>
    <string name="b11">Add</string>
    <string name="b12">UPDATE</string>
    <string name="t18">ADD TO MY TO DO LIST</string>
    <string name="t19">TASK 1</string>
    <string name="t20">TASK 2</string>
    <string name="t21">TASK 3</string>
    <string name="t22">DATE</string>
    <string name="b13">Add To MY TO DO</string>
    <string name="t23">UPDATE MY TO DO</string>
    <string name="t24">TASK 1</string>
    <string name="t25">TASK 2</string>
    <string name="t26">TASK 3</string>
    <string name="t27">DATE</string>
    <string name="b14">Delete</string>
    <string name="b15">UPDATE</string>
    <string name="t28">SHOW BMI CATEGORY</string>
    <string name="t29">Height</string>
    <string name="t30">Weight</string>
    <string name="b16">CALCULATE</string>
    <string name="t31">Result</string>
    <string name="t32">Range</string>
    <string name="t33">Category</string>
</resources>